# card-classifier

./: .gitignore  download_data.py  model.ipynb  prediction.py  pyproject.toml
app/: main.py  model.py
app/static/: index.html
