[project]
name = "card-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "ipykernel>=6.29.5",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.3",
]
